# fifth

./: .gitattributes  .gitignore  CLAUDE.md  README.md  fifth  install.fs  problems.db
compiler/: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  STATUS.md  build.rs  test.fs  tf.fs
compiler/backend/: Cargo.toml  README.md
compiler/backend/examples/: fibonacci.rs  simple_compile.rs
compiler/backend/src/: error.rs  lib.rs
compiler/backend/tests/: backend_edge_cases.rs  calling_convention_tests.rs  codegen_edge_cases.rs  codegen_tests.rs  error_recovery_tests.rs  ffi_coverage_tests.rs  ir_verification_tests.rs  optimization_edge_cases.rs  stack_cache_tests.rs
compiler/benches/: comparison_benchmarks.rs  forth_benchmarks.rs  inference_bench.rs  phase2_optimization_bench.rs
compiler/benchmarks/: BENCHMARK_REPORT.md  QUICKSTART.md  concurrency_bench.forth  results.json  run-benchmarks.fs  run_benchmarks.py
compiler/benchmarks/c_baseline/: Makefile  benchmark_output.txt  bubble_sort  bubble_sort.c  fibonacci  fibonacci.c  matrix  matrix.c  sieve  sieve.c  string_ops  string_ops.c
compiler/benchmarks/forth/: bubble_sort.fth  coremark.fth  fibonacci.fth  matrix.fth  sieve.fth
compiler/benchmarks/performance_validation/: Cargo.toml
compiler/cli/: Cargo.toml  README.md  USER_GUIDE.md  build.fs  build.sh  compiler.rs  doc_generator.rs  doc_style.css  error_messages.rs  execute.rs  main.rs  profiler.rs  repl.rs  runtime_bridge.rs
compiler/cli/.cargo/: config.toml
compiler/cli/examples/: calculator.fth  factorial.fth  fibonacci.fth  fizzbuzz.fth  hello.fth  sorting.fth
compiler/docs/: ARCHITECTURE.md  BACKEND.md  CONCURRENCY.md  CROSS_PLATFORM_SUPPORT.md  ERROR_CODES.md  IR_SPECIFICATION.md  PERFORMANCE.md  QUICK_START.md  RUNTIME_REFERENCE.md  SYSTEM_DIAGRAMS.md  TESTING_GUIDE.md  TYPE_SYSTEM_SPECIFICATION.md  specification.json
compiler/examples/: GO_ORCHESTRATOR_README.md  MULTI_AGENT_README.md  agent_generated_batch.forth  agent_workflow.md  analysis_demo.rs  benchmark.forth  codegen_demo.rs  compilation_example.md  concurrency_hello_world.forth  factorial.forth  factorial.fth  ffi_example.c  fibonacci.forth  file_io_demo.fth  file_io_examples.fth  forth_multi_agent.forth  hello  hello.forth  hello.fth  inference_demo.rs  llama-cli.fth  math.fth  multi-agent-coordinator.fs  multi_agent_coordinator.py  optimization_demo.rs  orchestrator.go  pattern-cli-examples.fs  pattern-http-examples.fs  pattern_cli_examples.sh  pattern_http_examples.sh  pattern_usage.rs  pgo_demo.rs  semantic_diff_new.forth  semantic_diff_old.forth  simple_math.forth  start-agent-servers.fs  start_agent_servers.sh  test-llama-cli.fs  test-llama-cli.sh  type_composition_demo.forth
compiler/examples/specs/: abs.json  factorial.json  fibonacci.json  gcd.json  square.json
compiler/examples/stream6/: factorial_with_provenance.forth
compiler/frontend/: Cargo.toml  DESIGN.md  README.md  STATUS.md
compiler/frontend/benches/: parser_bench.rs
compiler/frontend/examples/: simple.rs
compiler/frontend/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  ssa.rs  ssa_validator.rs  stack_effects.rs  type_inference.rs
compiler/frontend/tests/: error_handling_tests.rs  integration_tests.rs  parser_edge_cases.rs  ssa_validation_examples.rs
compiler/optimizer/: Cargo.toml
compiler/optimizer/benches/: optimizer_bench.rs  type_specialization_bench.rs  zero_cost_bench.rs
compiler/optimizer/examples/: zero_cost_demo.rs
compiler/optimizer/src/: .!94365!analysis.rs  .!94374!stack_cache.rs  .!94378!dead_code.rs  .!94388!superinstructions.rs  aggressive_inline.rs  analysis.rs  codegen.rs  constant_fold.rs  cranelift_peephole.rs  dead_code.rs  inline.rs  ir.rs  lib.rs  memory_opt.rs  pgo_superinstructions.rs  stack_cache.rs  superinstructions.rs  type_specialization.rs  whole_program.rs  zero_cost.rs
compiler/optimizer/tests/: optimization_coverage_tests.rs  pgo_integration_tests.rs  type_specialization_tests.rs
compiler/runtime/: README.md  ans_core.forth  bootstrap.c  concurrency.c  concurrency.h  ffi.c  forth_runtime.c  forth_runtime.h  memory.c  schema.sql  seed.sql  test_wrappers.c
compiler/runtime/minimal_forth/: Makefile
compiler/runtime/tests/: Makefile  test_concurrency.c  test_platform_optimizations  test_platform_optimizations.c
compiler/scripts/: analyze-crashes.fs  analyze_crashes.sh  compile.forth  detect-cpu-features.fs  detect_cpu_features.sh  download-tinycc.sh  embed-source.fs  embed_source.sh  extract.forth  fuzz-overnight.fs  fuzz_overnight.sh  install-cross-platform.forth  install-rust.fs  install-rust.sh  install.forth  platform.forth  quick-fuzz.fs  quick_fuzz.sh  run-destructive-tests.fs  run_destructive_tests.sh  verify-destructive-tests.fs  verify-fuzz-setup.fs  verify_destructive_tests.sh  verify_fuzz_setup.sh
compiler/src/: backend.rs  compiler.rs  engine.rs  error.rs  lib.rs  main.rs  pipeline.rs  runtime_ffi.rs
compiler/src/codegen/: hotpath_opt.rs  metadata.rs  mod.rs  spec_gen.rs
compiler/src/diagnostics/: confidence.rs  fix_engine.rs  mod.rs  patterns.rs
compiler/src/errors/: error_code.rs  formatter.rs  mod.rs  structured.rs
compiler/src/inference/: engine.rs  mod.rs  types.rs
compiler/src/patterns/: cli.rs  database.rs  http.rs  integration.rs  mod.rs  registry.rs  template_jit.rs  templates.rs  validation.rs
compiler/src/performance/: benchmarks.rs  metrics.rs  mod.rs  modeling.rs
compiler/src/provenance/: embedding.rs  extraction.rs  metadata.rs  mod.rs
compiler/src/semantic_diff/: analyzer.rs  differ.rs  mod.rs  reporter.rs
compiler/src/server/: mod.rs  routes.rs  server.rs
compiler/tests/: README_CONCURRENCY_TESTS.md  RUNTIME_TEST_REPORT.md  ans_forth_compliance.rs  cli_tests.rs  concurrency_integration_test.forth  correctness_tests.rs  critical_path_coverage_tests.rs  extended_words_tests.rs  file_io_tests.rs  inference_integration.rs  integration_tests.rs  optimizer_tests.rs  pattern_coverage_tests.rs  pipeline_coverage_tests.rs  platform_tests.rs  runtime_tests.rs  test_runtime.c  test_utils.rs
engine/:   (+10 more)
(+307 files in other folders)
