[workspace]
members = [
    "backend",
    "frontend",
    "optimizer",
    "benchmarks/performance_validation",
]
exclude = [
    "tests/fuzz",
]
resolver = "2"

[package]
name = "fifthc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "fifthc"
path = "src/main.rs"

[[bin]]
name = "fifthc-server"
path = "src/bin/fastforth-server.rs"
required-features = ["server"]

[lib]
name = "fastforth"
path = "src/lib.rs"

[dependencies]
# Workspace crates
fastforth-frontend = { path = "frontend" }
fastforth-optimizer = { path = "optimizer" }
backend = { path = "backend" }

# Core dependencies
thiserror.workspace = true
tracing.workspace = true
smallvec.workspace = true

# Command line interface
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
rustyline = "13.0"
colored = "2.1"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
rkyv = { version = "0.7", features = ["validation"] }

# Pattern system dependencies
regex = "1.10"

# Diagnostics and error handling
lazy_static = "1.4"
lru = "0.12"
fxhash = "0.2"

# Parallel processing
rayon = "1.8"

# Async runtime (optional, for server)
tokio = { version = "1.35", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }

# System utilities
num_cpus = "1.16"
rustc-hash = "1.1"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile = "3.8"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "inference_bench"
harness = false

[[bench]]
name = "phase2_optimization_bench"
harness = false

[[test]]
name = "deep_nesting"
path = "tests/stress/deep_nesting.rs"

[[test]]
name = "error_scenarios"
path = "tests/integration/error_scenarios.rs"

[[test]]
name = "error_handlers"
path = "tests/errors/mod.rs"

[dependencies.tracing-subscriber]
workspace = true
optional = true

[features]
default = ["inference"]
verbose = ["tracing-subscriber"]
inference = []
server = ["inference", "tokio", "axum"]
http-server = ["tokio"]
cranelift = ["backend/cranelift"]
llvm = ["backend/llvm"]
interpreter = []  # Pure Rust interpreter (no JIT compilation)
dev-fast = ["inference", "interpreter"]  # Fast development builds
prod = ["inference", "cranelift"]  # Production builds with JIT
destructive_tests = []  # Enable destructive testing (OOM, disk full, stack overflow)

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fifth Project"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
petgraph = "0.6"
smallvec = "1.11"
hashbrown = "0.14"
rustc-hash = "1.1"

# Analysis and optimization
cranelift-codegen = "0.102"
cranelift-frontend = "0.102"
cranelift-module = "0.102"
cranelift-jit = "0.102"
target-lexicon = "0.12"
inkwell = { version = "0.4", features = ["llvm16-0"] }

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
proptest = "1.4"

# Frontend dependencies
nom = "7.1"
