[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# LLVM bindings (optional for now - backend in progress)
inkwell = { version = "0.4", features = ["llvm16-0"], optional = true }

# Cranelift code generator (fast compilation)
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { version = "0.102", optional = true }
cranelift-module = { version = "0.102", optional = true }
cranelift-jit = { version = "0.102", optional = true }
target-lexicon = { version = "0.12", optional = true }

# Frontend integration
fastforth-frontend = { path = "../frontend" }

# Utilities
thiserror = "1.0"
tracing = "0.1"

# Data structures
hashbrown = "0.14"
smallvec = "1.11"

[features]
default = ["cranelift"]
llvm = ["inkwell"]
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-module", "cranelift-jit", "target-lexicon"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "error_recovery_tests"
path = "tests/error_recovery_tests.rs"
