[package]
name = "fastforth-cli"
version = "1.0.0"
edition = "2021"
authors = ["Fast Forth Team"]
description = "A modern, fast Forth compiler with excellent developer experience"
license = "MIT"

# Make this package independent of the parent workspace
[workspace]

[[bin]]
name = "fastforth"
path = "main.rs"

[dependencies]
# Local crates
fastforth-frontend = { path = "../frontend" }
backend = { path = "../backend", features = ["cranelift"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# REPL functionality
rustyline = "13.0"

# Terminal colors and formatting
termcolor = "1.4"
colored = "2.1"

# Directory handling
dirs = "5.0"

# Serialization (for LSP, JSON output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for parsing
regex = "1.10"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
