[package]
name = "fastforth-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nom.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false
