[package]
name = "fastforth-optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
petgraph.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true
cranelift-codegen.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tracing-subscriber.workspace = true

[[bench]]
name = "optimizer_bench"
harness = false
