[package]
name = "performance_validation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Time measurement
chrono = "0.4"

# Statistics
statistical = "1.0"

# Terminal output
colored = "2.1"
tabled = "0.15"

# File I/O
csv = "1.3"

# Command execution
which = "6.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "perf-validate"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false

[profile.bench]
inherits = "release"
